clz.getDeclaredConstructor().newInstance()